--- a/app/views/icm/incident_journals/_apply_skm.html.erb
+++ b/app/views/icm/incident_journals/_apply_skm.html.erb
@@ -3,8 +3,8 @@
         <table id='rows'>
           <thead>
             <tr >
-              <th style="width:50px;">
-                <div><%= t(:operation) %></div>
+              <th style="width:90px;">
+                <div><%= t(:apply) %></div>
               </th>
               <th style="width:130px;">
                 <div><%= t(:label_skm_entry_header_published_date) %></div>
@@ -25,7 +25,8 @@
           <tr id="<%=data[:id]%>">
             <td>
               <div>
-                <%= link_to(t(:apply),{ :action=>"apply_entry_header",:id=>data[:id]},:remote=>true) %>
+                <%= link_to(t(:content),{ :action=>"apply_entry_header",:id=>data[:id]},:remote=>true) %>
+                <%= link_to(t(:link),{ :action=>"apply_entry_header_link",:id=>data[:id]},:remote=>true) %>
               </div>
             </td>
             <td>
