--- a/app/views/irm/external_system_members/new_from_person.html.erb
+++ b/app/views/irm/external_system_members/new_from_person.html.erb
@@ -72,9 +72,14 @@
               <td id="topButtonRow" class="pbButton">
                 <%= form_for(@system_person,:url=>{:action=>"create_from_person"},:builder => LabellingFormBuilder) do |f| %>
                   <%= f.hidden_field(:status_code) %>
-                  <div class="button"><%= f.submit t(:save)%></div>
-                  <div class="button"><%= link_to t(:label_irm_person_save_and_add_group), {}, {:href => "javascript:void(0);", :class => "add_group_button"} %></div>
-                  <div class="button"><%= link_to(t(:cancel),{:controller =>"irm/people",:action=>"show",:id=>@person.id})%></div>
+                  <% if @step %>
+                      <div class="button"><%= link_to t(:last), {}, {:href => "javascript:void(0);", :class => "add_group_button_last"}%></div>
+                      <div class="button"><%= link_to t(:next), {}, {:href => "javascript:void(0);", :class => "add_group_button"} %></div>
+                      <div class="button"><%= link_to(t(:cancel),{:controller =>"irm/people",:action=>"show",:id=>@person.id})%></div>
+                  <% else %>
+                      <div class="button"><%= f.submit t(:save)%></div>
+                      <div class="button"><%= link_to(t(:cancel),{:controller =>"irm/people",:action=>"show",:id=>@person.id})%></div>
+                  <% end %>
                 <% end %>
               </td>
               <td class="pbHelp">
@@ -114,7 +119,11 @@
 <script type="text/javascript">
   $(function(){
     $(".add_group_button").click(function(){
-        $("#new_irm_external_system_person").attr('action', '<%= url_for(:action => "create_from_person", :controller => "irm/external_system_members", :next_action => "add_group")%>');
+        $("#new_irm_external_system_person").attr('action', '<%= url_for(:action => "create_from_person", :controller => "irm/external_system_members", :next_action => "next")%>');
+        $("#new_irm_external_system_person").submit();
+    });
+    $(".add_group_button_last").click(function(){
+        $("#new_irm_external_system_person").attr('action', '<%= url_for(:action => "create_from_person", :controller => "irm/external_system_members", :next_action => "last")%>');
         $("#new_irm_external_system_person").submit();
     });
   })
