--- a/app/views/irm/people/_edit_form.html.erb
+++ b/app/views/irm/people/_edit_form.html.erb
@@ -7,8 +7,13 @@
         <tr>
           <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_irm_person_edit)%></h2></td>
           <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><%= link_to t(:cancel), {:action => "index"}%></div>
+            <% if @step %>
+                <div class="button"><%= link_to t(:save), {}, {:href => "javascript:void(0);", :class => "add_system_button"} %></div>
+                <div class="button"><%= link_to t(:cancel), {:action => "index"}%></div>
+            <% else %>
+                <div class="button"><%= f.submit t(:save)%></div>
+                <div class="button"><%= link_to t(:cancel), {:action => "index"}%></div>
+            <% end %>
           </td>
         </tr>
       </tbody>
@@ -157,8 +162,13 @@
         <tr>
           <td class="pbTitle"></td>
           <td id="bottomButtonRow" class="pbButtonb">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><%= link_to t(:cancel), {:action => "index"}%></div>
+            <% if @step %>
+                <div class="button"><%= link_to t(:save), {}, {:href => "javascript:void(0);", :class => "add_system_button"} %></div>
+                <div class="button"><%= link_to t(:cancel), {:action => "index"}%></div>
+            <% else %>
+                <div class="button"><%= f.submit t(:save)%></div>
+                <div class="button"><%= link_to t(:cancel), {:action => "index"}%></div>
+            <% end %>
           </td>
         </tr>
       </tbody>
@@ -166,5 +176,18 @@
   </div>
 </div>
 <% end %>
+<script type="text/javascript">
+  $(function(){
+    $(".add_system_button").click(function(){
+        $("#irm_person_edit").attr('action', '<%= url_for(:action => "update", :controller => "irm/people", :next_action => "add_system")%>');
+        $("#irm_person_edit").submit();
+    });
+
+    $(".add_group_button").click(function(){
+        $("#irm_person_edit").attr('action', '<%= url_for(:action => "update", :controller => "irm/people", :next_action => "add_group")%>');
+        $("#irm_person_edit").submit();
+    });
+  })
+</script>
 
 
