--- a/app/views/irm/people/_new_form.html.erb
+++ b/app/views/irm/people/_new_form.html.erb
@@ -7,9 +7,7 @@
         <tr>
           <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_irm_person_new)%></h2></td>
           <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><%= link_to t(:label_irm_person_save_and_add_system), {}, {:href => "javascript:void(0);", :class => "add_system_button"} %></div>
-            <div class="button"><%= link_to t(:label_irm_person_save_and_add_group), {}, {:href => "javascript:void(0);", :class => "add_group_button"} %></div>
+            <div class="button"><%= link_to t(:save), {}, {:href => "javascript:void(0);", :class => "add_system_button"} %></div>
             <div class="button"><%= link_to t(:cancel), {:action => "index"}%></div>
           </td>
         </tr>
@@ -165,9 +163,7 @@
         <tr>
           <td class="pbTitle"></td>
           <td id="bottomButtonRow" class="pbButtonb">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><%= link_to t(:label_irm_person_save_and_add_system), {}, {:href => "javascript:void(0);", :class => "add_system_button"} %></div>
-            <div class="button"><%= link_to t(:label_irm_person_save_and_add_group), {}, {:href => "javascript:void(0);", :class => "add_group_button"} %></div>
+            <div class="button"><%= link_to t(:save), {}, {:href => "javascript:void(0);", :class => "add_system_button"} %></div>
             <div class="button"><%= link_to t(:cancel), {:action => "index"}%></div>
           </td>
         </tr>
