--- a/app/views/chm/change_plan_types/show.html.erb
+++ b/app/views/chm/change_plan_types/show.html.erb
@@ -1,12 +1,12 @@
-<%= common_title(:show_data=>@change_impact[:name]) %>
+<%= common_title(:show_data=>@change_plan_type[:name]) %>
 <div id="ep" class="detail-block page-block">
   <div class="pbHeader">
     <table cellpadding="0" cellspacing="0" border="0">
       <tbody>
         <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_chm_change_urgency_show) %>&nbsp;<%= t(:label_detail_info) %></h2></td>
+          <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_chm_change_plan_type_show) %>&nbsp;<%= t(:label_detail_info) %></h2></td>
           <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= link_to t(:edit), {:action => "edit", :id => @change_impact}%></div>
+            <div class="button"><%= link_to t(:edit), {:action => "edit", :id => @change_plan_type}%></div>
             <div class="button"><%= link_to t(:new), {:action => "new"}%></div>
             <div class="button"><%= link_to t(:back), {:action => "index"}%></div>
           </td>
@@ -20,31 +20,26 @@
         <tbody>
                 <tr>
                   <td class="labelCol"><label for="code"><%=t(:code)%></label></td>
-                  <td class="dataCol"><%=@change_impact.code%></td>
+                  <td class="dataCol"><%=@change_plan_type.code%></td>
                   <td class="labelCol empty">&nbsp;</td>
                   <td class="dataCol empty">&nbsp;</td>
                 </tr>
                 <tr>
                   <td class="labelCol"><label for="name"><%=t(:name)%></label></td>
-                  <td class="dataCol"><%=@change_impact[:name]%></td>
+                  <td class="dataCol"><%=@change_plan_type[:name]%></td>
                   <td class="labelCol empty">&nbsp;</td>
                   <td class="dataCol empty">&nbsp;</td>
                 </tr>
                 <tr>
                   <td class="labelCol"><label for="display_sequence"><%=t(:display_sequence)%></label></td>
-                  <td class="dataCol"><%=@change_impact.display_sequence%></td>
+                  <td class="dataCol"><%=@change_plan_type.display_sequence%></td>
                   <td class="labelCol empty">&nbsp;</td>
                   <td class="dataCol empty">&nbsp;</td>
                 </tr>
-                <tr>
-                  <td class="labelCol"><label for="default_flag"><%=t(:default_flag)%></label></td>
-                  <td class="dataCol"><%=check_img(@change_impact.default_flag)%></td>
-                  <td class="labelCol empty">&nbsp;</td>
-                  <td class="dataCol empty">&nbsp;</td>
-                </tr>
+
                 <tr>
                   <td class="labelCol"><label for="description"><%=t(:description)%></label></td>
-                  <td class="dataCol" colspan="3" width="82%"><%=@change_impact[:description]%></td>
+                  <td class="dataCol" colspan="3" width="82%"><%=@change_plan_type[:description]%></td>
                 </tr>
         </tbody>
       </table>
@@ -52,4 +47,4 @@
   </div>
 </div>
 
-<%=render :partial=>"multilingual/show",:locals=>{:main_data=>@change_impact} %>
+<%=render :partial=>"multilingual/show",:locals=>{:main_data=>@change_plan_type} %>
