--- a/app/views/chm/change_statuses/show.html.erb
+++ b/app/views/chm/change_statuses/show.html.erb
@@ -16,7 +16,7 @@
   </div>
   <div class="pbBody">
     <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
+      <table class="detailList infoList" cellpadding="0" cellspacing="0" border="0">
         <tbody>
                 <tr>
                   <td class="labelCol"><label for="code"><%=t(:code)%></label></td>
