--- a/app/views/chm/change_task_templates/_tasks.html.erb
+++ b/app/views/chm/change_task_templates/_tasks.html.erb
@@ -5,9 +5,6 @@
         <table>
           <thead>
             <tr>
-              <th>
-                <div><%= t(:label_chm_change_task_change_task_phase) %></div>
-              </th>
               <th style="width:80px;">
                 <div><%= t(:operation) %></div>
               </th>
@@ -32,7 +29,12 @@
             <%datas[0].each do |phase|  %>
               <tr>
                 <td>
-                  <div><b><%= phase[:name] %></b></div>
+                  <div>
+                    <%= link_to(t(:new),{:controller => "chm/change_template_tasks", :action => "new",:source_id=>@change_task_template.id,:phase_id=>phase.id},:back=>true) %>
+                  </div>
+                </td>
+                <td>
+                  <div><%= t(:label_chm_change_task_change_task_phase) %>:<b><%= phase[:name] %></b></div>
                 </td>
                 <td>
                   <div>
@@ -61,16 +63,15 @@
               </tr>
               <% datas[1][phase.id].each do |data| %>
                 <tr id="<%=data[:id]%>">
-                  <td><div></div></td>
                   <td>
                     <div>
-                      <%= link_to(t(:edit),{:controller => "chm/change_tasks", :action => "edit",:id=>data[:id]},:back=>true) %>
-                      <%= link_to(t(:delete),{:controller => "chm/change_tasks",:action => "destroy",:id=>data.id},{:back=>true,:method => :delete,:confirm => t(:label_are_you_sure) }) %>
+                      <%= link_to(t(:edit),{:controller => "chm/change_template_tasks", :action => "edit",:id=>data[:id]},:back=>true) %>
+                      <%= link_to(t(:delete),{:controller => "chm/change_template_tasks",:action => "destroy",:id=>data.id},{:back=>true,:method => :delete,:confirm => t(:label_are_you_sure) }) %>
                     </div>
                   </td>
                   <td>
                     <div>
-                      <%= data[:name] %>
+                      &nbsp;&nbsp;&nbsp;&nbsp;<%= data[:name] %>
                     </div>
                   </td>
                   <td>
