修该变更单任务显示方式

--- a/app/views/chm/change_task_templates/_tasks.html.erb
+++ b/app/views/chm/change_task_templates/_tasks.html.erb
@@ -34,15 +34,7 @@
                   </div>
                 </td>
                 <td>
-                  <div><%= t(:label_chm_change_task_change_task_phase) %>:<b><%= phase[:name] %></b></div>
-                </td>
-                <td>
-                  <div>
-                  </div>
-                </td>
-                <td>
-                  <div>
-                  </div>
+                  <div><b><%= t(:label_chm_change_task_change_task_phase) %>:<%= phase[:name] %></b></div>
                 </td>
                 <td>
                   <div>
