--- a/app/views/chm/change_requests/_journal.html.erb
+++ b/app/views/chm/change_requests/_journal.html.erb
@@ -5,12 +5,7 @@
       <div style="float:left; padding:5px 0 0 5px;">
         <h3><%= journal[:replied_name]  %></h3>
            <span style="color:#666666;font-style:italic;">
-             <%= t(:label_icm_reply_title,:message=>distance_of_time_in_words(Time.now, journal[:created_at])) %>
-           </span>
-      </div>
-      <div style="float:right; padding:5px 0 0 5px;">
-           <span style="color:#666666;font-style:italic; margin-right:10px;">
-             <%=format_date(journal[:created_at]) %>
+             <%= t(:label_reply_title,:time_distance=>distance_of_time_in_words(Time.now,journal[:created_at]),:date_format=>format_date(journal[:created_at])) %>
            </span>
       </div>
   </div>
