--- a/app/views/chm/change_requests/_list_journals.html.erb
+++ b/app/views/chm/change_requests/_list_journals.html.erb
@@ -15,12 +15,7 @@
               <div style="float:left; padding:5px 0 0 5px;">
                 <h3><%= @change_request[:submitted_by_name]  %></h3>
                    <span style="color:#666666;font-style:italic;">
-                     <%= t(:label_icm_submit_title,:message=>distance_of_time_in_words(Time.now, @change_request[:created_at])) %>
-                   </span>
-              </div>
-              <div style="float:right; padding:5px 0 0 5px;">
-                   <span style="color:#666666;font-style:italic; margin-right:10px;">
-                     <%=format_date(@change_request[:created_at]) %>
+                     <%= t(:label_reply_title,:time_distance=>distance_of_time_in_words(Time.now, @change_request[:created_at]),:date_format=>format_date(@change_request[:created_at])) %>
                    </span>
               </div>
           </div>
