--- a/app/views/chm/change_requests/_plan.html.erb
+++ b/app/views/chm/change_requests/_plan.html.erb
@@ -4,18 +4,14 @@
         <div style="float:left; padding:5px 0 0 5px;"><h3><%=change_plan_type[:name]%></h3></div>
         <div style="float:left"><div class="button"><%= link_to(t(:edit),{:controller=>"chm/change_plans",:action=>"change",:change_request_id=>change_plan.change_request_id,:change_plan_type_id=>change_plan.change_plan_type_id},:remote=>true)%></div></div>
 
-        <div style="float:right"><img width="25" height="25" alt="" src="<%=person_avatar(change_plan[:planed_by])%>"></div>
         <div style="float:right; padding:5px 0 0 5px;">
           <h3><%= change_plan[:planed_by_name]  %></h3>
              <span style="color:#666666;font-style:italic;">
-               <%= t(:label_icm_reply_title,:message=>distance_of_time_in_words(Time.now, change_plan[:created_at])) %>
+               <%= t(:label_reply_title,:time_distance=>distance_of_time_in_words(Time.now, change_plan[:created_at]),:date_format=>format_date(change_plan[:created_at])) %>
              </span>
         </div>
-        <div style="float:right; padding:5px 0 0 5px;">
-             <span style="color:#666666;font-style:italic; margin-right:10px;">
-               <%=format_date(change_plan[:created_at]) %>
-             </span>
-        </div>
+        <div style="float:right"><img width="25" height="25" alt="" src="<%=person_avatar(change_plan[:planed_by])%>"></div>
+
     </div>
     <div class="replyHeaderSection">
       <div class="message">
