--- a/app/views/chm/change_template_tasks/_edit_form.html.erb
+++ b/app/views/chm/change_template_tasks/_edit_form.html.erb
@@ -71,3 +71,11 @@
     <% end %>
     <% end %>
 <% end %>
+<script type="text/javascript">
+  $(function(){
+     if($("#support_group_id")){
+         $("#support_group_id").cascade("#support_person_id");
+     }
+
+  });
+</script>
