从事故单创建变更单,并在事故单上显示当前关联的变更单的信息

--- a/public/themes/default/stylesheets/container.css
+++ b/public/themes/default/stylesheets/container.css
@@ -582,6 +582,10 @@ body .miniTab .miniTabList li > span, body .miniTab .miniTabList li > a {
     padding: 8px 8px 4px 0;
 }
 
+.miniTab ul li a {
+    text-decoration: none;
+}
+
 #mainSelect .miniTab, .bMiniTab .miniTab {
     margin-bottom: -3px;
 }
