--- a/app/views/icm/incident_journals/_new_form.html.erb
+++ b/app/views/icm/incident_journals/_new_form.html.erb
@@ -218,7 +218,49 @@
 </div>
 </form>
 
-<div id="incidentRely">
+<% if @incident_request.change_request_id.present?%>
+  <!-- 处理关联的变更单 -->
+  <!-- tab -->
+  <div class="aloneTab miniTab secondaryPalette" id="tabNav" style="margin-bottom: 10px;">
+    <ul class="miniTabList" >
+      <li class="currentTab" id="nav_0" ref="incidentReply">
+        <a href="javascript:void(0)"><%= t(:label_icm_incident_journal_list) %></a>
+      </li>
+      <li id="nav_1" ref="changeRequest">
+        <a href="javascript:void(0)"><%= t(:label_chm_change_request) %></a>
+      </li>
+    </ul>
+  </div>
+  <!-- end tab -->
+  <div class="hidden" id="changeRequest" href="<%=url_for(:controller=>"chm/change_requests",:action=>"show_detail",:id=>@incident_request.change_request_id||"001")  %>">
+
+  </div>
+  <script type="text/javascript">
+    $(function(){
+        $("#tabNav li").live("click",function(e){
+            $("#tabNav li").removeClass("currentTab");
+            $(e.currentTarget).addClass("currentTab");
+            $("#tabNav li").each(function(index,element){
+                var ref = $("#"+$(element).attr("ref"));
+                console.debug("#"+$(element).attr("ref"));
+                if(ref&&!ref.hasClass("hidden")){
+                    ref.addClass("hidden");
+                }
+            });
+            var currentRef = $("#"+$(e.currentTarget).attr("ref"));
+            if(currentRef&&currentRef.hasClass("hidden")){
+                currentRef.removeClass("hidden");
+                if(currentRef.attr("href")&&!currentRef.attr("loaded")){
+                    currentRef.load(currentRef.attr("href"));
+                    currentRef.attr("loaded","true");
+                }
+            }
+        });
+    });
+  </script>
+<% end %>
+
+<div id="incidentReply">
 <div id="histories">
   <div style="padding: 0 0 10px 0; font-weight: bold;">
     <table cellpadding="0" cellspacing="0" border="0">
@@ -360,10 +402,6 @@
 <% end %>
 <% end %>
 <iframe id='frame' name="frame" style="width:1px;height:1px;border:0px" src="about:blank"></iframe>
-</div>
-
-<div id="relationChange" href="http://www.google.com">
-
 </div>
 
 <script>
