--- a/app/views/chm/change_requests/_show_tmp.html.erb
+++ b/app/views/chm/change_requests/_show_tmp.html.erb
@@ -24,7 +24,7 @@
                         <div style="margin-left: 15px; display:inline;">(<a href="javascript:void(0)" id="showMore" class="toggle-button" ref="incidentDetail" collapsedText="<%= t(:label_icm_incident_less_info) %>" expandedText="<%= t(:label_icm_incident_more_info) %>"><%= t(:label_icm_incident_more_info) %></a>)</div>
                     <% end %>
 
-                    <div id="incidentDetail" class="hidden">
+                    <div id="incidentDetail">
 
                     <%= spb.sub_page_block_body do %>
                         <table class="detailList infoList" cellpadding="0" cellspacing="0" border="0">
