--- a/app/views/chm/change_incident_relations/_change_incident_requests.html.erb
+++ b/app/views/chm/change_incident_relations/_change_incident_requests.html.erb
@@ -95,7 +95,7 @@
                   <tr id="<%=data[:id]%>">
                     <td>
                       <div>
-                        <%= link_to(t(:delete),{:controller => "chm/change_incident_relations",:action => "destroy",:incident_request_id=>data.id,:change_request_id=>@change_request.id},{:back=>true,:method => :delete,:confirm => t(:label_are_you_sure) }) %>
+                        <%= link_to(t(:delete),{:controller => "chm/change_incident_relations",:action => "destroy",:incident_request_id=>data.id,:change_request_id=>@change_request.id},{:remote=>true,:back=>true,:method => :delete,:confirm => t(:label_are_you_sure) }) %>
                       </div>
                     </td>
                     <td>
