修改事故单显示页面与变更单显示页面.修改变更单页面添加关联事故单的方式,使用LOV添加.

--- a/app/views/chm/change_incident_relations/_change_incident_requests.html.erb
+++ b/app/views/chm/change_incident_relations/_change_incident_requests.html.erb
@@ -105,7 +105,7 @@
                     </td>
                     <td>
                       <div>
-                        <%= link_to( "(#{data[:incident_status_name]})"+data[:title],{:controller=>"icm/incident_journals",:action=>"new",:request_id=>data[:id]},{:target=>"_blank"}) %>
+                        <%= link_to( "(#{data[:incident_status_name]})"+data[:title],{:controller=>"icm/incident_journals",:action=>"new",:request_id=>data[:id]}) %>
                       </div>
                     </td>
                     <td>
