修改事故单显示页面与变更单显示页面.修改变更单页面添加关联事故单的方式,使用LOV添加.

--- a/app/views/chm/change_requests/_list_journals.html.erb
+++ b/app/views/chm/change_requests/_list_journals.html.erb
@@ -1,5 +1,5 @@
 <%= page_block("journals") do |pb| %>
-    <%= pb.page_block_header({:title=>t(:reply)}) do%>
+    <%= pb.page_block_header({:title=>t(:label_chm_change_request_reply)}) do%>
       <td id="topButtonRow" class="pbButton">
       </td>
       <td class="pbHelp">
