修正: 登陆页面中，“记住用户名”的checkbox上面回车没有实现登陆

--- a/app/views/irm/common/login.html.erb
+++ b/app/views/irm/common/login.html.erb
@@ -81,6 +81,9 @@
                     $("#sumbitlogin").trigger("click");
                   }
                 });
+              $("#rememberchk").change(function(e){
+                  $("#sumbitlogin").focus();
+              });
           });
         </script>
     </body>
