添加记录报表运行历史功能

--- a/app/views/irm/report_request_histories/index.html.erb
+++ b/app/views/irm/report_request_histories/index.html.erb
@@ -24,6 +24,7 @@
                        {:key=>"executed_name",:label=>t(:label_irm_report_request_history_executed_by),:searchable=>true,:width=>"150px"},
                        {:key=>"start_at",:label=>t(:label_irm_report_request_history_start_at),:searchable=>true,:width=>"150px"},
                        {:key=>"end_at",:label=>t(:label_irm_report_request_history_end_at),:searchable=>true,:width=>"150px"},
+                       {:key=>"elapse",:label=>t(:label_irm_report_request_history_elapse),:width=>"70px"},
                        {:key=>"execute_type",:label=>t(:label_irm_report_request_history_execute_type),:formatter=>"Y.irm.template",:width=>"70px"}
                        ],{:paginator_box=>"historiesPaginatorBox",:search_box=>"historiesSearchBox"})%>
         <div id="historiesPaginatorBox"></div>
