--- a/app/views/icm/incident_categories/_edit_form.html.erb
+++ b/app/views/icm/incident_categories/_edit_form.html.erb
@@ -1,65 +1,73 @@
 <%= form_for(@incident_category,:url=>{:action=>"update"},:builder => LabellingFormBuilder) do |f| %>
-    <%= page_block do %>
-        <%= page_block_header(t(:label_icm_incident_category_new)) do %>
+    <%= page_block("newImpact") do |pb|%>
+        <%= pb.page_block_header(:title=>t(:label_icm_incident_category_edit)) do %>
+          <td id="topButtonRow" class="pbButton">
             <div class="button"><%= link_submit t(:save)%></div>
             <div class="button"><%= link_back t(:cancel)%></div>
+          </td>
+          <td class="pbHelp">
+          </td>
+
         <% end %>
-        <div class="pbBody">
-          <%= error_for @incident_category%>
-          <%= first_sub_page_block(t(:label_common_info)) do  %>
-            <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-              <tbody>
-                <tr>
-                  <td class="labelCol"><label for="code"><%=t(:label_icm_incident_category_code)%></label></td>
-                  <td class="dataCol"><%=@incident_category.code%></td>
-                  <td class="labelCol empty">&nbsp;</td>
-                  <td class="dataCol empty">&nbsp;</td>
-                </tr>
-                <tr>
-                  <td class="labelCol"><label for="name"><%=t(:label_icm_incident_category_name)%></label></td>
-                  <td class="dataCol"><%=f.text_field :name, :required=>true ,:id=>"report_name"%></td>
-                  <td class="labelCol empty">&nbsp;</td>
-                  <td class="dataCol empty">&nbsp;</td>
-                </tr>
+       <%= pb.page_block_body do %>
+            <%= error_for @incident_category%>
+            <%= sub_page_block("baseInfo") do |spb|%>
+                <%= spb.sub_page_block_header(:title=>t(:label_common_info),:first=>true)%>
+                <%= spb.sub_page_block_body do %>
+                  <table class="detailList" cellpadding="0" cellspacing="0" border="0">
+                    <tbody>
+                      <tr>
+                        <td class="labelCol"><label for="code"><%=t(:label_icm_incident_category_code)%></label></td>
+                        <td class="dataCol"><%=@incident_category.code%></td>
+                        <td class="labelCol empty">&nbsp;</td>
+                        <td class="dataCol empty">&nbsp;</td>
+                      </tr>
+                      <tr>
+                        <td class="labelCol"><label for="name"><%=t(:label_icm_incident_category_name)%></label></td>
+                        <td class="dataCol"><%=f.text_field :name, :required=>true ,:id=>"name"%></td>
+                        <td class="labelCol empty">&nbsp;</td>
+                        <td class="dataCol empty">&nbsp;</td>
+                      </tr>
 
+                      <tr>
+                        <td class="labelCol"><label for="description"><%=t(:label_icm_incident_category_description)%></label></td>
+                        <td class="dataCol" colspan="3" width="82%"><%=f.text_area :description, :cols=>60,:rows=>5,:id=>"description"%></td>
+                      </tr>
 
-                <tr>
-                  <td class="labelCol"><label for="description"><%=t(:label_icm_incident_category_description)%></label></td>
-                  <td class="dataCol" colspan="3" width="82%"><%=f.text_area :description, :cols=>60,:rows=>5,:id=>"report_description"%></td>
-                </tr>
-                <tr>
-                  <td class="labelCol"><label><%=(t :active)%></label></td>
-                  <td class="dataCol"><%=f.select :status_code, available_active_status%></td>
-                  <td class="labelCol empty">&nbsp;</td>
-                  <td class="dataCol empty">&nbsp;</td>
-                </tr>
-              </tbody>
-            </table>
+                    </tbody>
+                  </table>
+            <% end %>
           <% end %>
-          <%= sub_page_block(t(:label_icm_incident_category_external_system)) do  %>
-            <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-              <tbody>
-                <tr>
-                  <td class="labelCol empty">&nbsp;</td>
-                  <td class="dataCol empty">&nbsp;</td>
-                  <td class="labelCol empty">&nbsp;</td>
-                  <td class="dataCol empty">&nbsp;</td>
-                </tr>
-                <tr>
-                   <td class="labelCol">
+          <%= sub_page_block("baseInfo") do |spb|%>
+                <%= spb.sub_page_block_header(:title=>t(:label_icm_incident_category_external_system),:first=>true)%>
+                <%= spb.sub_page_block_body do %>
+                  <table class="detailList" cellpadding="0" cellspacing="0" border="0">
+                    <tbody>
+                      <tr>
+                        <td class="labelCol empty">&nbsp;</td>
+                        <td class="dataCol empty">&nbsp;</td>
+                        <td class="labelCol empty">&nbsp;</td>
+                        <td class="dataCol empty">&nbsp;</td>
+                      </tr>
+                      <tr>
+                         <td class="labelCol">
 
-                   </td>
-                   <td class="dataCol" colspan="3">
-                     <%= render :partial => "irm/duel_select/tmpl",:locals => {:f=>f,:sources=>external_system_duel_values,:str_value_field=>:system_str,:str_value=>@incident_category.get_system_str} %>
-                   </td>
-                </tr>
-              </tbody>
-            </table>
+                         </td>
+                         <td class="dataCol" colspan="3">
+                             <%= render :partial => "irm/duel_select/tmpl",:locals => {:f=>f,:sources=>external_system_duel_values,:str_value_field=>:system_str,:str_value=>@incident_category.get_system_str} %>
+                         </td>
+                      </tr>
+                    </tbody>
+                  </table>
+            <% end %>
           <% end %>
         </div>
-        <%= page_block_footer do %>
+        <%= pb.page_block_footer do %>
+          <td id="topButtonRow" class="pbButton">
             <div class="button"><%= link_submit t(:save)%></div>
             <div class="button"><%= link_back t(:cancel)%></div>
+          </td>
         <% end %>
+    <% end %>
     <% end %>
 <% end %>
