--- a/app/views/irm/reports/edit_program.html.erb
+++ b/app/views/irm/reports/edit_program.html.erb
@@ -1,13 +1,13 @@
 <%= common_title(:action_meaning=>t(:edit)) %>
+
 <%= form_for(@report,:url=>{:action=>"update_program"},:builder => LabellingFormBuilder) do |f| %>
     <%= page_block do %>
-        <%= page_block_header(t(:edit)) do %>
+        <%= page_block_header(t(:label_irm_report_edit)) do %>
             <div class="button"><%= link_submit t(:save)%></div>
             <div class="button"><%= link_back t(:cancel)%></div>
         <% end %>
         <div class="pbBody">
           <%= error_for @report%>
-          <%= f.hidden_field :program_type,:value=>"PROGRAM" %>
           <%= first_sub_page_block(t(:label_common_info)) do  %>
             <table class="detailList" cellpadding="0" cellspacing="0" border="0">
               <tbody>
