添加变更审批委员会及变更审批

--- a/app/views/layouts/setting.html.erb
+++ b/app/views/layouts/setting.html.erb
@@ -71,8 +71,8 @@
             </table>
         </div>
         <div id="pageBodySetup" class="page-body">
-            <div id=""></div>
-            <div id=""></div>
+            <div ></div>
+            <div ></div>
             <div id="motifCurve">
                 <div id="mc_l"></div>
                 <div id="mc_r"></div>
@@ -96,6 +96,6 @@
         </div>
       <%= render :partial => "/irm/common/footer"%>
     </div>
-<link rel="stylesheet" type="text/css" href="/themes/salesforce2/stylesheets/custom_yui_container_skin.css"></link>
+<link rel="stylesheet" type="text/css" href="/themes/salesforce2/stylesheets/custom_yui_container_skin.css">
 </body>
 </html>
